WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11846
REGRESSION (SearchField): Assertion failure in HTMLInputElement::setValueFromRenderer when editing via drag and drop (value == constrainValue(value) || constrainValue(value).isEmpty())
https://bugs.webkit.org/show_bug.cgi?id=11846
Summary
REGRESSION (SearchField): Assertion failure in HTMLInputElement::setValueFrom...
mitz
Reported
2006-12-16 02:57:43 PST
I hit an assert when I select "dolor" and drag and drop it between "lorem" and "ipsum" in <input type="search" value="lorem ipsum dolor"> ASSERTION FAILED: value == constrainValue(value) || constrainValue(value).isEmpty() (WebCore/html/HTMLInputElement.cpp:1088 void WebCore::HTMLInputElement::setValueFromRenderer(const WebCore::String&))
Attachments
Add attachment
proposed patch, testcase, etc.
Adele Peterson
Comment 1
2006-12-16 10:23:06 PST
<
rdar://problem/4887416
> REGRESSION (SearchField): Assertion failure in HTMLInputElement::setValueFromRenderer when editing via drag and drop (11846)
mitz
Comment 2
2007-01-27 15:19:26 PST
Fixed in
r18944
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug