WebCore/editing/ReplaceSelectionCommand.cpp
@@ -458,7 +458,8 @@ void ReplaceSelectionCommand::doApply()
     if (selection.isNone() || !selection.start().node())
         return;
     
-    if (!selection.isContentRichlyEditable())
+    bool selectionIsPlainText = !selection.isContentRichlyEditable();
+    if (selectionIsPlainText)
         m_matchStyle = true;
     
     Element* currentRoot = selection.rootEditableElement();
@@ -481,7 +482,8 @@ void ReplaceSelectionCommand::doApply()
     
     if (selectionStartWasStartOfParagraph && selectionEndWasEndOfParagraph ||
         startBlock == currentRoot ||
-        startBlock && startBlock->renderer() && startBlock->renderer()->isListItem())
+        startBlock && startBlock->renderer() && startBlock->renderer()->isListItem() ||
+        selectionIsPlainText)
         m_preventNesting = false;
     
     Position insertionPos = selection.start();
